[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Textures/GameCaroline/coloringGame-0.png" type="Texture" id=1]
[ext_resource path="res://Games/GameCaroline/GameCaroline.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/GameCaroline/bubble.png" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 0.4
scale_random = 1.0
color = Color( 1, 1, 1, 0.929412 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 84.7731
height = 129.452

[sub_resource type="Animation" id=3]
resource_name = "rotate"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -179.265, -214.492 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotateBack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -214.492, -179.3 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 497.989, 505.972 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -31.0
margin_top = -26.0
margin_right = 2269.0
margin_bottom = 1711.0
mouse_filter = 2
color = Color( 0.882353, 0.603922, 0.266667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Easel" type="Sprite" parent="ColorRect"]
position = Vector2( 1519.97, 858.781 )
rotation = -1.57079
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -5.97494, -1.90871, 1532.2, 1056.15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Palette" type="Sprite" parent="ColorRect"]
position = Vector2( 468.559, 887.391 )
rotation = -1.57079
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 518.649, 1053.28, 1235.21, 545.673 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sponge" type="Area2D" parent="ColorRect"]
position = Vector2( 543.808, 1249.2 )
rotation = -3.74359
scale = Vector2( 0.752862, 0.785649 )
z_index = 101

[node name="Particles2D" type="Particles2D" parent="ColorRect/Sponge"]
self_modulate = Color( 1, 1, 1, 0.941176 )
rotation = 3.11115
emitting = false
lifetime = 6.0
speed_scale = 2.99
explosiveness = 0.05
randomness = 0.21
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Sponge" type="Sprite" parent="ColorRect/Sponge"]
position = Vector2( 84.0653, 131.276 )
texture = ExtResource( 1 )
offset = Vector2( -84.0653, -131.276 )
region_enabled = true
region_rect = Rect2( 1526.08, 210.914, 212.717, 297.661 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Sponge"]
rotation = -0.0645087
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Sponge"]
playback_speed = 3.0
anims/rotate = SubResource( 3 )
anims/rotateBack = SubResource( 4 )

[node name="Lines" type="Sprite" parent="ColorRect"]
self_modulate = Color( 0.137255, 0.12549, 0.12549, 1 )
position = Vector2( 1510.89, 758.078 )
rotation = 0.00140721
z_index = 100
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -4.52438, 1049.87, 524.455, 910.711 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorSpawnPoints" type="Node2D" parent="ColorRect"]

[node name="Position2D" type="Position2D" parent="ColorRect/ColorSpawnPoints"]
position = Vector2( 370.003, 462.378 )

[node name="Position2D2" type="Position2D" parent="ColorRect/ColorSpawnPoints"]
position = Vector2( 580.231, 463.362 )

[node name="Position2D3" type="Position2D" parent="ColorRect/ColorSpawnPoints"]
position = Vector2( 360.893, 614.628 )

[node name="Position2D4" type="Position2D" parent="ColorRect/ColorSpawnPoints"]
position = Vector2( 576.13, 620.653 )

[node name="Position2D5" type="Position2D" parent="ColorRect/ColorSpawnPoints"]
position = Vector2( 355.077, 782.263 )

[node name="Position2D6" type="Position2D" parent="ColorRect/ColorSpawnPoints"]
position = Vector2( 576.141, 779.596 )

[node name="Brush" type="Sprite" parent="ColorRect"]
position = Vector2( 395.963, 904.641 )
rotation = 0.00140721
scale = Vector2( 0.839325, 0.839325 )
z_index = 105
texture = ExtResource( 1 )
offset = Vector2( -54.9527, 295.385 )
region_enabled = true
region_rect = Rect2( 1528.49, 511.007, 105.953, 541.328 )

[node name="BrushTip" type="Sprite" parent="ColorRect/Brush"]
position = Vector2( -57.0934, 94.9698 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1634.56, 613.914, 103.504, 149.889 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1488.97, 832.781 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 99.491, -0.935608 )
shape = SubResource( 5 )
one_way_collision_margin = 0.0

[connection signal="input_event" from="ColorRect/Sponge" to="." method="_on_Sponge_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
